--- a/content.css
+++ b/content.css
@@ -7,16 +7,19 @@
 .orange {
     background-color: #ffe4bc;
     color: #ffab32;
+    font-weight: bolder;
 }
 
 .green {
     background-color: #d1f2a5;
-    color: #0076ce;
+    color: #00ac1d;
+    font-weight: bolder;
 }
 
 .blue {
     background-color: #b3e5fc;
     color: #0076ce;
+    font-weight: bolder;
 }
 
 #introSquare {
@@ -43,10 +46,12 @@
     align-content: center;
 }
 
+.square p {
+    font-size: 18px;
+    font-weight: bolder;
+}
 
 .square {
-    vertical-align: middle;
-    align-content: center;
     text-align: center;
     margin: 10px;
     border-radius: 8px;
@@ -67,7 +72,17 @@
 }
 
 .article .description {
-    padding-top: 20px;
+    font-size: 14px;
+}
+
+.article button {
+    width: 100%;
+    height: 30px;
+    border-radius: 8px;
+    background-color: transparent;
+    color: dodgerblue;
+    border: 1px solid dodgerblue;
+    cursor:pointer;
 }
 
 .article .top {
@@ -77,6 +92,10 @@
     margin: -30px 0px 0px -30px;
     background-color: gray;
     border-radius: 15px 15px 0px 0px;
+}
+
+#lastArticle {
+    box-shadow: 8px 8px 0px #d9ffd4;
 }
 
 #secondColumn {
